--- a/index.html
+++ b/index.html
@@ -11,6 +11,26 @@
     <canvas id="imgCanvas" width="400" height="500" onclick="draw(event)"></canvas>
 
 
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
+    <script>
+        function draw(event) {
+            let canvas = document.getElementById("imgCanvas");
+            let ctx = canvas.getContext("2d");
+            let rect = canvas.getBoundingClientRect();
+
+            let posX = event.clientX - rect.left;
+            let posY = event.clientY - rect.top;
+
+            ctx.fillStyle = "#00ff00"
+
+            ctx.beginPath();
+
+            ctx.arc(posX, posY, 50, 0, 2 * Math.PI);
+
+            ctx.fill()
+
+
+    }
+    </script>
 </body>
 </html>
